# ideaverse-os

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  DESIGN.md  LICENSE  PRODUCT.md  README.md  package-lock.json  package.json  pyproject.toml  tsconfig.json
.agents/anthropic-marketing-kit/ideaverse-os-design-system/: README.md
.agents/folder-tree-icon-kit/ideaverse-os-design-system/: README.md
SKILLS/ideaverse-setup/: SKILL.md
_archived/cli-python/cli/: __main__.py  fonts.py
_archived/templates-old/: daily-note-template.md  domain-context-work.md  heading-font.css  me-skeleton.md  raw-_index.md
cli/: config.py  scaffold.py
docs/: SHAPE_landing_page.md  TESTING.md  font-guide.md  interview-guide.md  plugin-guide.md
src/: cli.ts  paths-json.ts  plan.ts  platform.ts  prompt.ts  scaffold.ts  templates.ts
templates/: .gitignore.tmpl  daily-_index.md  domain-context-personal.md  paths.json.tmpl  skills-_index.md  vault-_index.md  wiki-_index.md
templates/bundled-skills/cortex-compile/: SKILL.md
templates/bundled-skills/cortex-connect/: SKILL.md
templates/bundled-skills/cortex-lint/: SKILL.md
templates/bundled-skills/ideaverse-capture/: SKILL.md
templates/bundled-skills/ideaverse-os/: SKILL.md
templates/bundled-skills/web-clip-report/: SKILL.md
templates/bundled-skills/yt-light-research/: SKILL.md
templates/lean-files/: compass.md.tmpl  me.md.tmpl  memory.md.tmpl  runbook.md.tmpl  soul.md.tmpl  user.md.tmpl
templates/router-files/: .cursorrules.tmpl  AGENTS.md.tmpl  AIDER_CONVENTIONS.md.tmpl  CLAUDE.md.tmpl  GEMINI.md.tmpl
(+60 files in other folders)
